# ecs

./: Bitset.hpp  CMakeLists.txt  Entity.hpp  Group.hpp  IdPool.hpp  Manager.hpp  ecs.hpp
examples/: test.cpp
include/: Entity.hpp  IdPool.hpp  Manager.hpp
src/: Bitset.hpp  ComponentStorage.hpp  Entity.hpp  EntityHandle.hpp  Group.hpp  Handle.hpp  IdPool.cpp  IdPool.hpp  Manager.hpp  Matcher.hpp  Settings.hpp  Signature.hpp  TypeManager.cpp  TypeManager.hpp  Util.hpp  a.out  example.cpp  main.cpp  test.cpp
