#cmake_minimum_required(VERSION 3.4 FATAL_ERROR)
#project(Ecs VERSION 0.2 LANGUAGES CXX)

#file(GLOB_RECURSE ECS_SRC "*.hpp" "*.cpp")
#add_library(ecs ${ECS_SRC})

#target_include_directories(ecs PUBLIC
    #$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    #$<INSTALL_INTERFACE:include>
    #PRIVATE src)

#set_property(TARGET ecs PROPERTY CXX_STANDARD 14)

#install(TARGETS ecs
    #ARCHIVE DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    #LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    #RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
#install(DIRECTORY include/ DESTINATION ${PROJECT_INCLUDE_DIRECTORY})

#export(TARGETS ecs FILE EcsConfig.cmake)

